Updated JIRA Integration with test generation